--- a/esercizio 3/html/form.html
+++ b/esercizio 3/html/form.html
@@ -15,17 +15,22 @@
     <div class="container">
         <fieldset>
             <legend>Form</legend>
-            <form action="www.google.it" method="get" autocomplete="on" onsubmit="validateForm()">
+            <form action="www.google.it" method="get" autocomplete="on" onsubmit="event.preventDefault(); validateForm()">
                 <label for="name">Nome</label>
-                <input type="text" id="name" maxlength="30" required>
+                <input type="text" id="name" maxlength="30">
+
                 <label for="surname">Cognome</label>
-                <input type="text" id="surname" maxlength="40" required>
+                <input type="text" id="surname" maxlength="40">
+
                 <label for="matricola">Matricola</label>
-                <input type="number" id="matricola" max="1234567" required>
+                <input type="number" id="matricola" max="1234567">
+
                 <label for="email">Email</label>
                 <input type="email" id="email" maxlength="30" required>
+
                 <label for="tel">Telefono</label>
                 <input type="tel" id="tel" minlength="16" maxlength="16" required>
+
                 <label for="status">Status</label>
                 <input type="text" id="status" name="status" list="statusList" required>
 
